crates/oxc_react_compiler/tests/snapshots/meta-isms__repro-cx-assigned-to-temporary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/meta-isms/repro-cx-assigned-to-temporary.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer" @enableAssumeHooksFollowRulesOfReact:false @customMacros:"cx"
import { identity } from "shared-runtime";
const DARK = "dark";
function Component() {
	const $ = _c(2);
	const theme = useTheme();
	const t0 = cx({
		"styles/light": true,
		"styles/dark": theme.getTheme() === DARK
	});
	let t1;
	if ($[0] !== t0) {
		t1 = <div className={t0} />;
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
function cx(obj) {
	const classes = [];
	for (const [key, value] of Object.entries(obj)) {
		if (value) {
			classes.push(key);
		}
	}
	return classes.join(" ");
}
function useTheme() {
	return { getTheme() {
		return DARK;
	} };
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
